<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@drawable/pokebola"
    android:gravity="center">

    <TextView
        android:id="@+id/dialog_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sPokemonSeleccionado"
        android:textSize="18sp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginBottom="8dp"/>

    <TextView
        android:id="@+id/dialog_pokemon_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sPokemon"
        android:textSize="16sp"
        android:gravity="center"
        android:layout_marginBottom="16dp"/>

    <Button
        android:id="@+id/dialog_close_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sAceptar"
        android:backgroundTint="#D50000"
        android:textColor="@color/white"/>

</LinearLayout>