<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/pokemon_ultra_ball"
    android:orientation="vertical"
    android:weightSum="10"
    tools:context=".MainActivity">

    <!--  cotenedor fondo dinamico -->
    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/fragment_container"
        android:name="androidx.fragment.app.Fragment"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="8"
        tools:layout="@layout/fragment_default" />


    <!--  botones elige pokemon-->
    <RadioGroup
        android:id="@+id/pokemon_group"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:layout_marginHorizontal="40dp"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/charmander_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/charmander"
            android:text="@string/sCharmander"
            android:textColor="@color/white" />

        <RadioButton
            android:id="@+id/bulbasaur_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:buttonTint="@color/bulbasaur"
            android:text="@string/sBulbasaur"
            android:textColor="@color/white" />

        <RadioButton
            android:id="@+id/squirtle_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/squirtle"
            android:text="@string/sSquirtle"
            android:textColor="@color/white" />

    </RadioGroup>


    <!--  botones elegir - cancelar - cofirmar -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:gravity="center">

        <Button
            android:id="@+id/validate_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/red"
            android:text="@string/sElegir"
            android:textColor="@color/white"
            android:layout_margin="8dp"
            tools:ignore="ButtonStyle" />

        <!--    botones seleccion ind8 -->

        <Button
            android:id="@+id/cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:backgroundTint="@color/gray"
            android:text="@string/sCancelar"
            android:textColor="@color/white"
            android:visibility="gone"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/confirm_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:backgroundTint="@color/red"
            android:text="@string/sConfirmar"
            android:textColor="@color/white"
            android:visibility="gone"
            tools:ignore="ButtonStyle" />

    </LinearLayout>

</LinearLayout>